--- a/Styles/style.css
+++ b/Styles/style.css
@@ -34,6 +34,7 @@
     --light-gray: #f9f8f8;
     --second-gray: #d4d4d4;
     --gray-text: #525c60;
+    
 }
 
 body {
@@ -167,7 +168,6 @@ h1.title {
 
 .header-offer__button {
     max-width: 267px;
-    height: 82px;
     margin-top: 40px;
 }
 
@@ -219,7 +219,7 @@ h1.title {
 }
 
 h3.title {
-    font-weight: 400;
+    font-weight: 700;
     font-size: 40px;
     line-height: 52px;
     letter-spacing: 0.36px;
@@ -249,6 +249,10 @@ h3.title {
     max-width: 264px;
     width: 100%;
     margin: 105px auto 105px 55px;
+}
+
+.card__text h3.title {
+    font-weight: 400;
 }
 
 .block-organick .container {
@@ -586,7 +590,7 @@ h3.title {
 .container-offer {
     max-width: 1380px;
     width: 100%;
-    margin: 140px 30px;
+    margin: 140px auto;
 }
 
 .header-offer {
@@ -597,8 +601,8 @@ h3.title {
 
 .header-offer .title {
     font-weight: 700;
-    font-size: 45px;
-    line-height: 58px;
+    font-size: 40px;
+    line-height: 52px;
 
     letter-spacing: 0.36px;
     text-transform: capitalize;
@@ -626,8 +630,8 @@ h3.title {
     width: 100%;
     margin-bottom: 30px;
     font-weight: 700;
-    font-size: 44px;
-    line-height: 58px;
+    font-size: 40px;
+    line-height: 52px;
     letter-spacing: 0.36px;
     text-transform: capitalize;
 }
@@ -665,7 +669,6 @@ h3.title {
 .container-type div {
     max-width: 460px;
     width: 100%;
-    min-height: 580px;
 }
 
 .block-type .container {
@@ -694,7 +697,7 @@ h3.title {
     max-width: 300px;
     width: 100%;
     text-align: center;
-    margin: auto;
+    margin: 242px auto;
 
     font-weight: 700;
     font-size: 25px;
@@ -713,15 +716,19 @@ h3.title {
     width: 100%;
     background-image: url(../Images/png/background__block-9_orange-blue.png);
     background-repeat: no-repeat;
-    margin: 30px auto 70px;
+    margin: 30px auto 0px;
+    border-radius: 30px;
 }
 
 .container-subscription {
-    max-width: 1240px;
-    width: 100%;
+    padding: 0 120px;
     display: flex;
     justify-content: space-between;
     margin: 100px auto;
+}
+
+.block-subscription .container {
+    background-size: cover; 
 }
 
 .container-subscription h3 {
@@ -754,19 +761,19 @@ width: 100%;
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
-line-height: 29px;
+line-height: 82px;
 letter-spacing: 0.36px;
 }
 
 .form_send button {
     max-width: 197px;
     width: 100%;
-    height: 82px;
     border: none;
     background: var(--dark-blue);
     display: flex;
     border-radius: 16px;
     color: var(--white);
+    height: 82px;
 }
 
 .container-footer {
